--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.21",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.0",
+    "node-url-shortener": "^2.0.3",
     "nodemailer": "^6.8.0",
     "nodemon": "^3.0.2"
   },
