--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
     "multer": "^1.4.5-lts.1",
     "node-url-shortener": "^2.0.3",
     "nodemailer": "^6.8.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "resend": "^6.1.2"
   },
   "engines": {
-    "node": "16.14.2"
+    "node": ">=18"
   }
 }
