--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "express-jwt": "^8.4.1",
     "express-validator": "^6.14.2",
     "helmet": "^6.0.0",
     "http-status-codes": "^2.2.0",
@@ -33,6 +32,6 @@
     "resend": "^6.1.2"
   },
   "engines": {
-    "node": ">=18"
-  }
+  "node": "20.x"
+}
 }
